# vesc_tool

./: .gitignore  CMakeLists.txt  FOCBOX_UI.pro  MSVC-build-vesc_tool-release.ps1  bleuart.cpp  build_android_macOS  build_ios.sh  build_lin  build_macos  build_macos_cmake.sh  build_win4CI.ps1  codeloader.cpp  codeloader.h  configparams.cpp  gamepad.cpp  gamepad.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  qmlcache_loader.cpp  utility.cpp  utility.h  vesc_tool.pro  vescinterface.cpp  vescinterface.h
.github/: pull.yml
.github/overlay/: build_android_macOS  build_ios.sh  build_lin4CI  build_macos4CI  build_macos_arm64  build_macos_universal  build_win4CI.ps1
.github/scripts/: apply_patch.ps1  apply_patch.sh  generate_release_notes.sh  overlay_files.ps1  overlay_files.sh
.github/workflows/: CreateRelease.yml  CreateTag.yml  Linux.yml  android-qt6.yml  android.yml  android2.yml  build.yml  cleanup-runs.yml  createRelease.yml  ios-qt6.yml  ios.yml  linux-qt6.yml  linux.yml  mac-arm64-qt6.yml  mac-arm64.yml  mac-qt6.yml  mac-universal-qt6.yml  mac-universal.yml  mac.yml  macOS.yml  upstream-sync.yaml  validate-patches.yml  win-qt6.yml  win.yml  windows.yml
QCodeEditor/: CMakeLists.txt
QCodeEditor/resources/languages/: lisp.xml
android/: AndroidManifest.xml.in  build.gradle
android/src/com/vedder/vesc/: Utils.java
display_tool/: CMakeLists.txt
docs/superpowers/plans/: 2026-05-18-ci-release-layered-refactor.md  2026-05-19-gamepad-sdl3-verification.md  2026-05-19-gamepad-sdl3.md  2026-05-19-phase1-verification.md  2026-05-19-phase2-verification.md  2026-05-19-phase3-verification.md  2026-05-19-phase4-verification.md  2026-05-19-phase5-verification.md  2026-05-19-qt6-port-phase1-cmake.md  2026-05-19-qt6-port-phase2-framework.md  2026-05-19-qt6-port-phase3-linux-windows.md  2026-05-19-qt6-port-phase4-android-ios.md  2026-05-19-qt6-port-phase5-dual-release-ci.md
docs/superpowers/specs/: 2026-05-18-ci-release-layered-refactor-design.md  2026-05-19-gamepad-sdl3-design.md  2026-05-19-qt5-qt6-dual-release-ci-design.md  2026-05-19-qt6-port-design.md
esp32/: CMakeLists.txt  esp32flash.cpp  esp32flash.h  esp_loader.h  packed_struct.h  protocol.h  protocol_serial.c  protocol_spi.c  serial_comm_prv.h  sip.h
heatshrink/: CMakeLists.txt
ios/: APPStoreExportOptions.plist  FBLaunchScreen.xib  iOS-Info.plist  iOSForAppStore-Info-Source.plist  iOSForAppStore-Info.plist  vesc_tool_appstore.xcconfig
linux/: vesc_tool.desktop
lzokay/: CMakeLists.txt
maddy/: CMakeLists.txt
map/: CMakeLists.txt  mapwidget.cpp
minimp3/: CMakeLists.txt
mobile/: CMakeLists.txt  ConfigPageApp.qml  ConfigPageCustom.qml  ConfigPageMotor.qml  ConnectScreen.qml  CustomGauge.qml  CustomGaugeV2.qml  DirectoryPicker.qml  FilePicker.qml  FwUpdate.qml  Lisp.qml  LogBox.qml  Packages.qml  RtDataSetup.qml  SetupWizardFoc.qml  SetupWizardIMU.qml  SetupWizardInput.qml  SetupWizardIntro.qml  TcpHubBox.qml  fwhelper.cpp  main.qml
pages/: CMakeLists.txt  pageappsettings.cpp  pagedataanalysis.cpp  pageespprog.cpp  pageespprog.h  pageexperiments.cpp  pagefirmware.cpp  pagefirmware.h  pageloganalysis.cpp  pageloganalysis.h  pageloganalysis.ui  pagemotorcomparison.cpp  pagemotorcomparison.h  pagemotorsettings.cpp  pagesampleddata.cpp  pagevescpackage.cpp
patches/3.01/: vesc_tool.patch
patches/6.00/: vesc_tool.patch
patches/6.02/: vesc_tool.patch
patches/6.05/: vesc_tool.patch
patches/6.06/: vesc_tool.patch
patches/7.00/: vesc_tool.patch
patches/master/: vesc_tool.patch
qmarkdowntextedit/: CMakeLists.txt
res/: CHANGELOG.md
res/LispBM/Examples/: encoder_mt6701_conf.lbm  foc_profile.lbm
res/config/: res_config.qrc
res/config/3.55/: parameters_appconf.xml
res/config/3.57/: parameters_appconf.xml
res/config/3.58/: parameters_appconf.xml
res/config/3.59/: parameters_appconf.xml
res/config/3.60/: parameters_appconf.xml
res/config/3.61/: parameters_appconf.xml
res/config/3.64/: parameters_appconf.xml
res/config/4.00/: parameters_appconf.xml
res/config/4.01/: parameters_appconf.xml
res/config/4.02/: parameters_appconf.xml
res/config/5.00/: parameters_appconf.xml
res/config/5.02/: parameters_appconf.xml
res/config/5.03/: parameters_appconf.xml
res/config/6.06/: parameters_appconf.xml
res/config/7.00/: parameters_appconf.xml  parameters_mcconf.xml
res/config/7.01/: info.xml  parameters_appconf.xml  parameters_mcconf.xml
res/qml/Examples/: RtDataSetup.qml
signatures/version1/: cla.json
widgets/: CMakeLists.txt  canlistitem.cpp  experimentplot.cpp  mrichtextedit.cpp  qcustomplot.h
